sfml/DSFML/import/dsfml/network/external.d

    
        sfIPAddress sfIPAddress_FromString(char*);
        sfIPAddress sfIPAddress_FromBytes(ubyte, ubyte, ubyte, ubyte);
        bool sfIPAddress_IsValid(sfIPAddress);
        void sfIPAddress_ToString(sfIPAddress, char*);
        sfIPAddress sfIPAddress_GetLocalAddress();
        sfIPAddress sfIPAddress_GetPublicAddress();
        sfIPAddress sfIPAddress_LocalHost();
        
        //packet.d
        struct sfPacket {};
        
        sfPacket* sfPacket_Create();
        void sfPacket_Destroy(sfPacket*);
        void sfPacket_Append(sfPacket*, void*, size_t);
        void sfPacket_Clear(sfPacket*);
        byte* sfPacket_GetData(sfPacket*);
        uint sfPacket_GetDataSize(sfPacket*);
        bool sfPacket_CanRead(sfPacket*);
        byte sfPacket_ReadInt8(sfPacket*);
        ubyte sfPacket_ReadUint8(sfPacket*);
        short sfPacket_ReadInt16(sfPacket*);
        ushort sfPacket_ReadUint16(sfPacket*);
        int sfPacket_ReadInt32(sfPacket*);
        uint sfPacket_ReadUint32(sfPacket*);
        float sfPacket_ReadFloat(sfPacket*);
        double sfPacket_ReadDouble(sfPacket*);
        void sfPacket_ReadString(sfPacket*, char*);
        void sfPacket_ReadWideString(sfPacket*, wchar*);
        void sfPacket_WriteInt8(sfPacket*, byte);
        void sfPacket_WriteUint8(sfPacket*, ubyte);
        void sfPacket_WriteInt16(sfPacket*, short);
        void sfPacket_WriteUint16(sfPacket*, ushort);
        void sfPacket_WriteInt32(sfPacket*, int);
        void sfPacket_WriteUint32(sfPacket*, uint);
        void sfPacket_WriteFloat(sfPacket*, float);
        void sfPacket_WriteDouble(sfPacket*, double);
        void sfPacket_WriteString(sfPacket*, char*);
        void sfPacket_WriteWideString(sfPacket*, wchar*);
        
        //sockettcp.d
        struct sfSocketTCP {};
        
        sfSocketTCP* sfSocketTCP_Create();
        void sfSocketTCP_Destroy(sfSocketTCP*);
        bool sfSocketTCP_Connect(sfSocketTCP*, ushort, sfIPAddress);
        bool sfSocketTCP_Listen(sfSocketTCP*, ushort);
        SocketStatus sfSocketTCP_Accept(sfSocketTCP*, sfSocketTCP**, sfIPAddress*);
        SocketStatus sfSocketTCP_Send(sfSocketTCP*, byte*, size_t);
        SocketStatus sfSocketTCP_Receive(sfSocketTCP*, byte*, size_t, size_t*);
        SocketStatus sfSocketTCP_SendPacket(sfSocketTCP*, sfPacket*);
        SocketStatus sfSocketTCP_ReceivePacket(sfSocketTCP*, sfPacket*);
        bool sfSocketTCP_IsValid(sfSocketTCP*);
        
        //socketudp.d
        struct sfSocketUDP {};
    
        sfSocketUDP* sfSocketUDP_Create();
        void sfSocketUDP_Destroy(sfSocketUDP*);
        bool sfSocketUDP_Bind(sfSocketUDP*, ushort);
        bool sfSocketUDP_Unbind(sfSocketUDP*, ushort);
        SocketStatus sfSocketUDP_Send(sfSocketUDP*, byte*, size_t, sfIPAddress, ushort);
        SocketStatus sfSocketUDP_Receive(sfSocketUDP*, byte*, size_t, size_t*, sfIPAddress*);
        SocketStatus sfSocketUDP_SendPacket(sfSocketUDP*, sfPacket*, sfIPAddress*, ushort);
        SocketStatus sfSocketUDP_ReceivePacket(sfSocketUDP*, sfPacket*, sfIPAddress*);
        bool sfSocketUDP_IsValid(sfSocketUDP*);
        
        //selector.d
        struct sfSelectorTCP {};
        struct sfSelectorUDP {};
    
        sfSelectorTCP* sfSelectorTCP_Create();
        sfSelectorUDP* sfSelectorUDP_Create();
        void sfSelectorTCP_Destroy(sfSelectorTCP*);
        void sfSelectorUDP_Destroy(sfSelectorUDP*);
        void sfSelectorTCP_Add(sfSelectorTCP*, sfSocketTCP*);
        void sfSelectorUDP_Add(sfSelectorUDP*, sfSocketUDP*);
        void sfSelectorTCP_Remove(sfSelectorTCP*, sfSocketTCP*);
        void sfSelectorUDP_Remove(sfSelectorUDP*, sfSocketUDP*);
        void sfSelectorTCP_Clear(sfSelectorTCP*);
        void sfSelectorUDP_Clear(sfSelectorUDP*);
        sfSocketTCP* sfSelectorTCP_GetSocketReady(sfSelectorTCP*, uint);
        sfSocketUDP* sfSelectorUDP_GetSocketReady(sfSelectorUDP*, uint);
        uint sfSelectorTCP_Wait(sfSelectorTCP*, float);
        uint sfSelectorUDP_Wait(sfSelectorUDP*, float);
    }
}
